fix(clay-css): Add border-spacing, border-collapse not working in IE

--- a/packages/clay-css/src/scss/components/_tables.scss
+++ b/packages/clay-css/src/scss/components/_tables.scss
@@ -22,7 +22,7 @@ th {
 }
 
 .table {
-	border-collapse: collapse;
+	border-spacing: 0;
 	font-size: $table-font-size;
 	margin-bottom: $table-margin-bottom;
 
